# bgpy_pathsec

./: .gitignore  LICENSE  README.md  accidental_leak.py  accidental_leak_down_only.py  intentional_leak_down_only.py  origin_hijack_fake_path.py  origin_hijack_fake_path_transitive.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
attacks/: __init__.py  accidental_leak.py
bgp_simulator_pathsec_policies/: __init__.py
bgp_simulator_pathsec_policies/announcements/: __init__.py  path_manipulation_ann.py
bgp_simulator_pathsec_policies/attacks/: __init__.py  accidental_leak.py  aggregator.py  eavesdropper.py  global_eavesdropper.py  intentional_leak.py  intentional_leak_no_hash.py  intentional_leak_no_hash_up.py  intentional_leak_timid.py  mh_leak.py  mh_path_manipulation.py  mixins.py  origin_hijack.py  ris_eavesdropper.py  ris_eavesdropper_up.py  ris_neighbors.py  shortest_path_export_all.py  shortest_path_export_all_no_hash.py  shortest_path_export_all_no_hash_timid.py  shortest_path_export_all_no_hash_up.py  shortest_path_export_all_no_hash_up_transitive_dropping.py  shortest_path_export_all_no_hash_up_unknown_adopters.py  shortest_path_export_all_timid.py  shortest_path_export_all_up.py  shortest_path_export_all_up_unknown_adopters.py  two_hop_attack.py  two_hop_attack_up.py  valid_signature.py
bgp_simulator_pathsec_policies/policies/: __init__.py  aggregator_variants.py  bgpsec.py  bgpsec_transitive.py  bgpsec_transitive_do.py  bgpsec_transitive_do_encr_up.py  do.py  kapk.py  path_end.py  transitive_dropping.py  transitive_dropping_always.py  transitive_dropping_no_adopt_customers.py
bgp_simulator_pathsec_policies/subgraphs/: __init__.py  adopting_count_subgraph.py  non_adopting_count_subgraph.py  overhead_bpo_subgraph.py  overhead_subgraph.py  path_length_subgraph.py  ribs_in_size_subgraph.py  transitive_conversions.py
bgp_simulator_pathsec_policies/tests/: test_all.py  test_attacks.py  test_bgpsec.py  test_bgpsec_transitive.py  test_down_only.py
bgp_simulator_pathsec_policies/tests/engine_tests/: __init__.py  test_engine.py
bgp_simulator_pathsec_policies/tests/engine_tests/engine_test_configs/: __init__.py  config_001.py  config_002.py  config_003.py  config_004.py  config_005.py  config_006.py  config_007.py  config_008.py  config_009.py  config_010.py  config_011.py  config_012.py  config_013.py  config_014.py  config_015.py  config_016.py  config_017.py  config_018.py  config_019.py  config_020.py  config_021.py  config_022.py  config_023.py  config_024.py  config_025.py  config_026.py  config_027.py  config_028.py  config_029.py  config_030.py  config_031.py  (+12 more)
bgp_simulator_policies/: __init__.py
bgp_simulator_policies/announcements/: __init__.py  do_ann.py  path_manipulation_ann.py
bgp_simulator_policies/attacks/: __init__.py  accidental_leak.py  aggregator.py  eavesdropper.py  eavesdropper_up.py  err_test.py  intentional_leak.py  intentional_leak_no_hash.py  intentional_leak_no_hash_up.py  intentional_leak_timid.py  mh_leak.py  mh_path_manipulation.py  neighbor_hijack.py  origin_hijack.py  ris_eavesdropper.py  ris_neighbors.py  shortest_path_export_all_no_hash.py  two_hop_attack.py
bgp_simulator_policies/graphs/: __init__.py  custom_graph.py  custom_writer.py  leak_graph.py
bgp_simulator_policies/policies/: __init__.py  aggregator_variants.py  bgpsec.py  bgpsec_transitive.py  bgpsec_transitive_do.py  do.py  path_end.py
bgp_simulator_policies/subgraphs/: __init__.py  overhead_subgraph.py
bgp_simulator_policies/tests/: __init__.py  conftest.py  test_all.py  test_attacks.py  test_bgpsec.py  test_bgpsec_transitive.py  test_down_only.py
bgp_simulator_policies/tests/engine_tests/: __init__.py  test_engine.py
bgp_simulator_policies/tests/graphs/: __init__.py  graph_100.py  pgraph_001.py  pgraph_002.py  pgraph_003.py  pgraph_005.py  pgraph_006.py  pgraph_007.py
bgp_simulator_policies/tests/yaml_bgpsec_tests/: test_bgpsec_yaml.py
bgp_simulator_policies/tests/yaml_bgpsec_transitive_tests/: test_bgpsec_transitive_yaml.py
bgp_simulator_policies/tests/yaml_down_only_tests/: test_down_only_yaml.py
bgp_simulator_policies/tests/yaml_small_tests/: test_small_yaml.py
bgp_simulator_policies/tests/yaml_small_tests01/: test_small_yaml.py
bgp_simulator_policies/tests/yaml_small_tests02/: test_small_yaml.py
bgp_simulator_policies/tests/yaml_small_tests03/: test_small_yaml.py
bgpy_pathsec/: __init__.py
bgpy_pathsec/announcements/: __init__.py  path_manipulation_ann.py
bgpy_pathsec/attacks/: __init__.py  accidental_leak.py  eavesdropper.py  intentional_leak.py  mh_leak.py  mh_path_manipulation.py  origin_hijack.py  pathsec_scenario_config.py  shortest_path_export_all.py  transitive_dropping_no_adopt_customers.py  two_hop_attack.py  valid_signature.py
bgpy_pathsec/policies/: __init__.py  aggregator_variants.py  bgpsec.py  bgpsec_transitive.py  bgpsec_transitive_do.py  bgpsec_transitive_do_encr_up.py  do.py  kapk.py  path_end.py  transitive_dropping.py  transitive_dropping_always.py  transitive_dropping_no_adopt_customers.py
bgpy_pathsec/subgraphs/: __init__.py  adopting_count_subgraph.py  non_adopting_count_subgraph.py  overhead_bpo_subgraph.py  overhead_subgraph.py  path_length_subgraph.py  ribs_in_size_subgraph.py  transitive_conversions.py
bgpy_pathsec/tests/: test_all.py  test_attacks.py  test_bgpsec.py  test_bgpsec_transitive.py  test_down_only.py
bgpy_pathsec/tests/engine_tests/: __init__.py  test_engine.py
docs/: ATTACKS.md  REPRODUCING_RESULTS.md
run/: 2023_aggregated.py  accidental_leak_down_only.py  aggregated.py  bgpisec_paper_graph_generator.ipynb  do_up_comparison.py  intentional_leak_no_hash.py  kapk.py  kubetest.py  origin_hijack_fake_path.py  origin_hijack_fake_path_ray.py  origin_hijack_fake_path_transitive.py  overhead.py  path_end_comparison.py  proconid_overhead.py  provider_cones.py  ris_eavesdropper.py  run-sec-never.sh  run-transitive-dropping.sh  run.sh  security_never.py  transitive_dropping.py
run/chatgpt/: config_001.py  pgraph_001.py
(+264 files in other folders)
