# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgp_simulator_pathsec_policies
author = Cameron Morris
author_email = cameron.morris@uconn.edu
description = Path Security policies and attacks for jfuruness' BGP Simulator
version = 0.0.1
url = https://github.com/c-morris/bgp-simulator-policies

keywords = 
    BGP
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV
    ASPA
    BGPSec
    EzBGPSec

classifiers = 
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
# http for github actions, and I believe github no longer supports ssh with pip
install_requires =
    bgp_simulator_pkg @ git+https://github.com/jfuruness/bgp_simulator_pkg.git#7ac578ae80a0b2e8a5e17c5caf223d3b678488f3
    matplotlib==3.5.2
    pytest==7.1.2

description-file = README.md

[options.entry_points]
console_scripts =
    bgp_simulator_pathsec_policies = bgp_simulator_pathsec_policies.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test = 
    bgp_simulator_pkg @ git+https://github.com/jfuruness/bgp_simulator_pkg.git#70ca5de95528e84a23ef3788fa7aee94a80d7779
    matplotlib==3.5.1
    pytest==6.2.5
    types-requests==2.26.1
    pytest-cov==3.0.0
    mypy==0.910
    flake8==4.0.1
    tox==3.24.4
    pytest-xdist==2.5.0

[options.package_data]
bgp_simulator_pathsec_policies = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit = 
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
