# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgpy_pathsec
author = Cameron Morris
author_email = cameron.morris@uconn.edu
description = Path Security policies and attacks for jfuruness' BGP Simulator
version = 1.0.0
url = https://github.com/c-morris/bgpy_pathsec

keywords =
    BGP
    BGPy
    bgpy_pkg_pkg
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV
    ASPA
    BGPsec
    BGPiSec
    #BGP-iSec


classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
# http for github actions, and I believe github no longer supports ssh with pip
install_requires =
    bgpy_pkg

description-file = README.md

[options.entry_points]
console_scripts =
    bgpy_pathsec = bgpy_pathsec.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test =
    bgpy_pkg[test]

[options.package_data]
bgpy_pathsec = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit =
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
